Fixed spacing on logo front page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -199,7 +199,7 @@ nav {
   &.title {
 
     margin-bottom: 3rem;
-    padding: 0.3rem 2rem;
+    padding: 0.3rem 3rem;
 
     font-size: 5rem;
   }
